--- a/public/penyewatemplate/assets/css/main.css
+++ b/public/penyewatemplate/assets/css/main.css
@@ -1859,6 +1859,15 @@ section,
   color: var(--accent-color);
 }
 
+.recent-posts .title h2 {
+  color: var(--heading-color);
+  transition: 0.3s;
+}
+
+.recent-posts .title h2:hover {
+  color: var(--accent-color);
+}
+
 .recent-posts .post-author-img {
   width: 50px;
   border-radius: 50%;
@@ -3043,7 +3052,8 @@ body {
 .map {
   position: relative;
   /* position: absolute; */
-  left: 33.3333%;
+  /* left: 33.3333%; */
+  left: 0;
   width: 66.6666%;
   height: 400px;
   top: 0;
@@ -3126,7 +3136,8 @@ a:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #00853e;
+  /* background: #00853e; */
+  background :var(--accent-color);
   border-radius: 0;
 }
 
@@ -3135,7 +3146,8 @@ a:hover {
   cursor: pointer;
   height: 56px;
   width: 56px;
-  background-image: url('https://docs.mapbox.com/help/demos/gl-store-locator/marker.png');
+  /* background-image: url('https://docs.mapbox.com/help/demos/gl-store-locator/marker.png'); */
+  background-image: url('/assets/images/baru/marker.svg');
 }
 
 /* Marker tweaks */
