--- a/public/penyewatemplate/assets/css/main.css
+++ b/public/penyewatemplate/assets/css/main.css
@@ -3022,6 +3022,17 @@ section,
   font-weight: 500;
 }
 
+.select-form {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+
 /* BOOKING MAP */
 
 body {
@@ -3147,12 +3158,12 @@ a:hover {
   height: 56px;
   width: 56px;
   /* background-image: url('https://docs.mapbox.com/help/demos/gl-store-locator/marker.png'); */
-  background-image: url('/assets/images/baru/marker.svg');
+  background-image: url('{{ asset('assets/images/baru/marker.svg') }}');
 }
 
 /* Marker tweaks */
 .mapboxgl-popup {
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 .mapboxgl-popup-close-button {
@@ -3161,11 +3172,11 @@ a:hover {
 
 .mapboxgl-popup-content {
   font:
-    400 15px/22px 'Source Sans Pro',
+    400 7px/14px 'Source Sans Pro',
     'Helvetica Neue',
     sans-serif;
   padding: 0;
-  width: 180px;
+  width: 280px;
 }
 
 .mapboxgl-popup-content h3 {
@@ -3174,13 +3185,13 @@ a:hover {
   margin: -15px 0 0;
   padding: 10px;
   border-radius: 3px 3px 0 0;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .mapboxgl-popup-content h4 {
   margin: 0;
   padding: 10px;
-  font-weight: 400;
+  font-weight: 200;
 }
 
 .mapboxgl-popup-content div {
